	* pimlib/run/pass/gm2.exp:
	* pimlib/ulm/run/pass/gm2.exp:
	* quads/run/pass/gm2.exp:
	* switches/check-all/run/pass/gm2.exp:
	* switches/iso/run/pass/gm2.exp:
	* switches/pim2/run/pass/gm2.exp:
	* switches/pim3/run/pass/gm2.exp:
	* switches/pim4/run/pass/gm2.exp:
	* types/run/pass/gm2.exp:  all have their link paths
	  corrected.  Tests should now run on machines without
	  a preinstalled gm2.
	
2010-02-24       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  corrected dates and removed unnecessary
	  duplication of source code installation of libraries in
	  O2, SO and SO_O2 directories.
	* gm2/gm2/gm2spec.c:  add a default include path determining
	  where the one copy of the library source files exists.
	* gm2/gm2-compiler/M2Base.def:  define INT, INTS and INTL
	  ISO functions.  Also provide FLOATL, FLOATS, TRUNCS, TRUNCL
	  pervasive procedure functions.
	* gm2/gm2-compiler/M2Base.mod:  implement INT, INTS and INTL
	  ISO functions.
	* gm2/gm2-compiler/M2Quads.mod:  BuildIntFunction new procedure.
	  Fix error recovery bug reported by Scott Iverson which was
	  exposed by foo(ADR(undefinedvar)).
	* gm2/gm2-compiler/M2Range.mod:  convert High value to Integer
	  type before index out of range comparison is performed.
	* gm2/gm2.texi:  update documentation to include FLOATL, FLOATS,
	  TRUNCS and TRUNCL pervasive procedure functions.

2010-02-20       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  turn on optimization for the O2
	  versions of the libraries.
	* gm2/gm2/m2pp.c:  improved debugging of the integer type
	  nodes.
	* gm2/gm2-compiler/M2GenGCC.mod:  convert high calculation
	  to an integer type.

2010-02-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  corrected library name: libgm2iso.

2010-02-18       Michael Lambert <lambert@psc.edu>

	* gm2/patches/gcc/4.1.2/11.michael_snowleopard2
	  removed patch to mklink.c
	* gm2/tools-src/mklink.c:  applied patch to file.
	  (CC environment variable will override gcc for the